WIP deposit flows